--- a/package.json
+++ b/package.json
@@ -2,17 +2,37 @@
   "name": "ktwiki",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
+    "@types/react-dnd": "^3.0.2",
     "@types/react-dom": "^16.9.0",
+    "axios": "^0.20.0",
+    "core-js": "3",
+    "ramda": "^0.27.1",
     "react": "^16.13.1",
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.13.1",
+    "react-grid-layout": "^1.1.1",
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "3.4.3",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.3.0",
+    "true-myth": "^4.0.0",
+    "type-fest": "^0.16.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -35,5 +55,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/ramda": "^0.27.17",
+    "@types/react-dnd-html5-backend": "^3.0.2",
+    "@types/react-grid-layout": "^1.1.0",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/react-router-redux": "^5.0.18",
+    "@types/redux-saga": "^0.10.5"
   }
 }
