--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "es2015", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -14,12 +10,15 @@
     "forceConsistentCasingInFileNames": true,
     "module": "esnext",
     "moduleResolution": "node",
+    "typeRoots": ["./node_modules/@types", "./@types"],
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "strictPropertyInitialization": false,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "noImplicitAny": true,
+    "baseUrl": "src"
   },
-  "include": [
-    "src"
-  ]
+  "exclude": ["dist", "build", "node_modules", "public"],
+  "include": ["src"]
 }
