--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.13.1",
     "react-grid-layout": "^1.1.1",
+    "react-monaco-editor": "^0.40.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-router-redux": "^4.0.8",
@@ -31,6 +32,8 @@
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
+    "slate": "^0.59.0",
+    "slate-react": "^0.59.0",
     "true-myth": "^4.0.0",
     "type-fest": "^0.16.0",
     "typescript": "~3.7.2"
@@ -64,6 +67,8 @@
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-router-redux": "^5.0.18",
-    "@types/redux-saga": "^0.10.5"
+    "@types/redux-saga": "^0.10.5",
+    "@types/slate": "^0.47.7",
+    "@types/slate-react": "^0.22.9"
   }
 }
